# whatbook

./: .ghci  .gitignore  potential-octo-shame.cabal  whatbook.cabal
src/: BookDB.hs  Main.hs  ParseMobi.hs
