name:                potential-octo-shame
version:             0.1.0.0
synopsis:            A simple mobi parser, datastore and indexer for mobi files.
-- description:
license:             WTFPL
license-file:        LICENSE
author:              Quinlan Pfiffer
maintainer:          qpfiffer@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

executable potential-octo-shame
  -- main-is:
  -- other-modules:
  build-depends:       base,
                       bytestring,
                       filemanip,
                       KyotoCabinet
  hs-source-dirs:      src
  Main-is:             Main.hs
  ghc-options:         -Wall
