name:                whatbook
version:             0.1.0.0
synopsis:            A simple mobi parser, datastore and indexer for mobi files.
-- description:
license:             WTFPL
license-file:        LICENSE
author:              Quinlan Pfiffer
maintainer:          qpfiffer@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

executable whatbook
  -- main-is:
  other-modules:       ParseMobi,
                       BookDB
  build-depends:       base,
                       binary,
                       bytestring >= 0.10.2.0,
                       filemanip,
                       ghc-prim,
                       KyotoCabinet
  hs-source-dirs:      src
  Main-is:             Main.hs
  ghc-options:         -Wall
